--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-config": "^1.5.5",
