--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
     "@react-navigation/elements": "^2.2.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
@@ -16,15 +18,19 @@
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
+    "pod-install": "^0.3.4",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.26.9",
+    "@react-native-community/cli": "^18.0.0",
     "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
