--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@react-native-vector-icons/evil-icons": "^1.10.1",
+    "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "@react-navigation/elements": "^2.2.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "lottie-react-native": "7.1.0",
     "pod-install": "^0.3.4",
     "react": "18.3.1",
@@ -24,7 +27,8 @@
     "react-native-config": "^1.5.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1"
+    "react-native-screens": "^4.9.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
